@@ -6,8 +6,8 @@ plugins {
 group 'br.ufop.brTomaz'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 12
-targetCompatibility = 12
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     mavenCentral()
@@ -19,7 +19,12 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
+mainClassName = "br.ufop.brTomaz.MainApplication"
 
+applicationDefaultJvmArgs = ["--add-exports=javafx.graphics/com.sun.javafx.stage = ALL-UNNAMED",
+                             "--add-opens=javafx.controls/javafx.scene.control.skin = ALL-UNNAMED",
+                             "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"
+]
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
